fix: improve scroll-up on product change and fix white overscroll gap

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,13 @@
   box-sizing: border-box;
 }
 
+html, body {
+  background-color: var(--color-bg);
+  color: var(--color-primary);
+  transition: background-color 0.3s ease, color 0.3s ease;
+  overscroll-behavior-y: none;
+}
+
 svg {
   transition: color 0.3s ease, fill 0.3s ease, stroke 0.3s ease;
 }
@@ -44,11 +51,6 @@ svg {
 
   max-width: 100%;
   min-height: 100vh;
-
-  background-color: var(--color-bg);
-  color: var(--color-primary);
-
-  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .main-content {
